--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.1.7",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.555.0",
     "next": "14.2.5",
     "nprogress": "^0.2.0",
     "react": "18.3.1",
@@ -31,26 +32,25 @@
     "react-hook-form": "^7.51.4",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
     "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-  "eslint": "8.57.0",
-  "eslint-config-next": "14.2.5",
-  "@types/jsonwebtoken": "^9.0.6",
-  "@types/leaflet": "^1.9.12",
-  "@types/node": "20.12.7",
-  "@types/react": "18.2.52",
-  "@types/react-dom": "18.2.18",
-  "autoprefixer": "10.4.18",
-  "postcss": "8.4.37",
-  "prisma": "5.12.0",
-  "tailwindcss": "3.4.4",
-  "typescript": "5.4.2",
-  "husky": "^9.1.3"
-}
-
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/leaflet": "^1.9.12",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.52",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.18",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.5",
+    "husky": "^9.1.3",
+    "postcss": "8.4.37",
+    "prisma": "5.12.0",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.4.2"
+  }
 }
