--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
-    "next": "14.2.5",
+    "next": "^16.0.7",
     "nprogress": "^0.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
