--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest run --passWithNoTests",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev"
   },
@@ -38,6 +39,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/leaflet": "^1.9.12",
     "@types/node": "20.12.7",
@@ -47,9 +51,11 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.3",
+    "jsdom": "^24.1.0",
     "postcss": "8.4.37",
     "prisma": "5.12.0",
     "tailwindcss": "3.4.4",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "vitest": "^1.6.1"
   }
 }
