--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "types": ["vitest/globals"],
+    "jsx": "react-jsx",
+    "types": [
+      "vitest/globals"
+    ],
     "plugins": [
       {
         "name": "next"
