--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@prisma/client": "5.12.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.0.4",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.45.0",
     "@tanstack/react-virtual": "^3.13.13",
     "@types/leaflet.markercluster": "^1.5.6",
